Adicionar inputs na aba de aparência e som

--- a/app.html
+++ b/app.html
@@ -29,7 +29,7 @@
         </div>
     </header>
 
-<button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button>
+<button id="buttonDrafts"> <img src="./images/drafts.png" id="drafts"> </button>
 
     <div id="pageContent">
         <aside id="filter"> <br>
@@ -227,6 +227,7 @@
         <p id="rankFooter">Ranking</p>
     </footer>
 
+    <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button></a>
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/footerOptions.js"></script>
     <script src="./scripts/addPost.js"></script>
