melhorar responsibilidade de textos

--- a/user.html
+++ b/user.html
@@ -156,7 +156,16 @@
                     <div class="postResult">
                         <a href="#"><h1>A Post</h1></a>
                         <i>By <a href="#">Ion Mateus</a></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum fuga, officia ut exercitationem quod vitae quibusdam minima iusto modi ab, similique accusamus. Quae distinctio molestias alias iste consectetur quas ab?</p>
+                        <p>lvwuvEkXKgvJiplMEGaAQKUaUNrdFrzw
+                            gXPtbVrbHLMoMQLCdVfDQngBqNHbdIbx
+                            jvWOJZoWnyvmFaDVoHErBusuCwEauiXB
+                            MHzghLPQjnAwICSJPNGZlPHCpowrQSca
+                            lvFLDRhQrKCCffeZZpUuGTaZVkWKeHvp
+                            mOErUbuWBXwGBQzWMvwzVusqbKuVEWDz
+                            qTbnVmAcqIEWhYyxtjxvrnKKeWHdoXIZ
+                            reajfrRIiCkJpSADESPgsQNcwmPPZkMH
+                            RMQuStfjMtesptiPuBTnEsrSBjfWWtWA
+                            lHpioeFYEsEWzFTUfdEEYOMLxSZIwpHP</p>
                         <b>
                             <a href="#">Programming</a> |
                             <a href="#">C++</a> |
