Adicionar responsividade em página de configurações

--- a/app.html
+++ b/app.html
@@ -29,7 +29,7 @@
         </div>
     </header>
 
-<button id="buttonDrafts"> <img src="./images/drafts.png" id="drafts"> </button>
+<button id="buttonDrafts"> <img src="./images/Drafts.png" id="drafts"> </button>
 
     <div id="pageContent">
         <aside id="filter"> <br>
