Desenvolver página de configurações

--- a/app.html
+++ b/app.html
@@ -46,7 +46,7 @@
             </footer>
         </aside>
 
-        <article id="posts">
+        <article id="boxPosts">
             <h1>Resultados</h1> <br>
 
             <div class="postResult">
