--- a/configurations.html
+++ b/configurations.html
@@ -61,8 +61,10 @@
                 <label>@username</label> <br>
                 <input type="text" placeholder="@username" disabled  id="@username"> <button onclick="LiberarEscrita('@username')">Editar</button> <br><br>
 
+                <div class="Senhas">
                 <label>Senha</label> <br> 
                 <input type="text" placeholder="*****" disabled  id="Senha"> <button onclick="LiberarEscrita('Senha')">Editar</button> <br><br>
+                </div>
 
                 <label>E-mail</label> <br>
                 <input type="email" placeholder="E-mail" disabled id="Email"> <button onclick="LiberarEscrita('Email')">Editar</button> <br><br><br>
