Corrigir box de posts

--- a/app.html
+++ b/app.html
@@ -26,7 +26,7 @@
         <div id="botões">
         <a href="./configurations.html"><button><img src="./images/settings.png"></button></a>
         <a href="./user.html"><button><img src="./images/noUserImage.png"></button></a>
-        </div>
+    </div>
     </header>
 
 
@@ -37,6 +37,9 @@
             <img src="./images/noUserImage.png"> <br>
             <textarea placeholder="O que você quer escrever?"></textarea>
         </div>
+        <div class="botão">
+        <button class="button">Enviar para análise</button>
+        </div> 
     </div>
 
 
