Adicionar pequenas alterações e implementar background image no index

--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
     <div class="boxDraft" onclick="event.stopPropagation()">
         <div class="DraftsInfo">
             <img src="./images/noUserImage.png"> <br>
-            <div contentEditable placeholder="O que você quer escrever?" class="textarea"> </div>
+            <div class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
         </div>
         <div class="botões">
             <button class="button extra icones" onclick="openFile()"> <img src="./images/img-icon.png"></button>
