Consertar aside user

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <section class="hero">
-    <h1>CodeDrafts</h1> <br>
+    <h1>Code&shyDrafts</h1> <br>
     <p>A plataforma em que você encontra tudo de que você precisa</p>
 
 </section>
