Mudar imagens & adicionar animação para background image inicial

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body> 
 
     <header>
-        <a href="#" class="Principal"> <img style="width:200px" src="./images/iconWithText.png" id="icone"> </a>
+        <a href="#" class="Principal"> <img src="./images/iconWithTextLight.png" id="icone"> </a>
         <ul class="Lista">
             <li> <a href="./app.html" id="aHover">App</a> </li>
             <li> <a href="#sobre" id="aHover">Sobre</a> </li>
@@ -44,7 +44,7 @@
 
 <div>
 <span> <h1>Sobre</h1> </span><br>
-<p style="font-size: 20px;">
+<p>
     
     Rede social gameficada para programadores serem incentivados a acessarem e criarem pequenos artigos voltados a programação.  
 <br><br>
