Corrigir imagens e organizar css

--- a/app.html
+++ b/app.html
@@ -13,8 +13,8 @@
 <body onload="footer()" onclick="fecharDraft()">
 
     <header>
-        <div id="icone">
-        <a href="index.html"><img src="./images/iconWithText.png"></a>
+        <div id="divIcone">
+        <a href="index.html"><img src="./images/iconWithTextLight.png" id="icone"></a>
         </div>
 
         <div class="input-box" id="search">
