--- a/app.html
+++ b/app.html
@@ -66,125 +66,28 @@
         <article id="boxPosts">
             <h1>Resultados</h1> <br>
 
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
 
             <div class="postResult">
+
+                <div style="background-image: url(https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg);"></div>
+
                 <a href="#"><h1>A Post</h1></a>
                 <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.
+
+                </p>
+
                 <b>
                     <a href="#">Programming</a> |
                     <a href="#">C++</a> |
                     <a href="#">Google</a> |
                     <a href="#">Java</a>
                 </b>
+
             </div> 
 
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
-
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
-
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
-
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
-
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
-
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
-
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
-
-            <div class="postResult">
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-            </div> 
 
         </article>
 
