Mudar diretório de arquivos

--- a/public/app.html
+++ b/public/app.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeDrafts</title>
-    <link rel="stylesheet" href="./styles/styleGenerico.css">
-    <link rel="stylesheet" href="./styles/appStyle.css">
-    <link rel="icon" href="./images/logoIconWithoutBackground.png">
-    <script src="./scripts/avoidFlickering.js"></script>
+    <link rel="stylesheet" href="styles/styleGenerico.css">
+    <link rel="stylesheet" href="styles/appStyle.css">
+    <link rel="icon" href="images/logoIconWithoutBackground.png">
+    <script src="scripts/avoidFlickering.js"></script>
 </head>
 <body onload="footer()" onclick="fecharDraft()">
 
     <header>
         <div id="divIcone">
-        <a href="index.html"><img src="./images/iconWithTextLight.png" id="icone"></a>
+        <a href="index.html"><img src="images/iconWithTextLight.png" id="icone"></a>
         </div>
 
         <div class="input-box" id="search">
@@ -24,24 +24,24 @@
           </div>
 
         <div id="botões">
-        <a href="./configurations.html"><button><img src="./images/settings.png"></button></a>
-        <a href="./user.html"><button><img src="./images/noUserImage.png"></button></a>
+        <a href="configurations.html"><button><img src="images/settings.png"></button></a>
+        <a href="user.html"><button><img src="images/noUserImage.png"></button></a>
     </div>
     </header>
 
 
-    <button id="buttonDrafts" onclick="abrirDraft()"> <img src="./images/Drafts.png" id="drafts"> </button>
+    <button id="buttonDrafts" onclick="abrirDraft()"> <img src="images/Drafts.png" id="drafts"> </button>
     
     <div class="boxDraft" onclick="event.stopPropagation()">
         <div class="DraftsInfo">
-            <img src="./images/noUserImage.png"> <br>
+            <img src="images/noUserImage.png"> <br>
             <div class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
         </div>
         <div class="botões">
-            <button class="button extra icones" onclick="openFile()"> <img src="./images/img-icon.png"></button>
-            <button class="button icones" id="bold_button"> <img src="./images/Bold-icon.png"> </button>
-            <button class="button icones" id="italic_button"> <img src="./images/Italic-icon.png"> </button>
-            <button class="button icones" id="underline_button"> <img src="./images/Underline-icon.png"> </button>
+            <button class="button extra icones" onclick="openFile()"> <img src="images/img-icon.png"></button>
+            <button class="button icones" id="bold_button"> <img src="images/Bold-icon.png"> </button>
+            <button class="button icones" id="italic_button"> <img src="images/Italic-icon.png"> </button>
+            <button class="button icones" id="underline_button"> <img src="images/Underline-icon.png"> </button>
 
             <button class="button Analise">Enviar para análise</button>
         </div>
@@ -96,43 +96,43 @@
             <div id="rankDiv">
 
                 <div class="rankResult">
-                    <img src="./images/lorem.png">
+                    <img src="images/lorem.png">
                     <h1>Daniel</h1>
                     <p>001</p>
                 </div>
 
                 <div class="rankResult">
-                    <img src="./images/lorem.png">
+                    <img src="images/lorem.png">
                     <h1>D</h1>
                     <p>001</p>
                 </div>
 
                 <div class="rankResult">
-                    <img src="./images/lorem.png">
+                    <img src="images/lorem.png">
                     <h1>Daniel folr...</h1>
                     <p>9999</p>
                 </div>
 
                 <div class="rankResult">
-                    <img src="./images/lorem.png">
+                    <img src="images/lorem.png">
                     <h1>Daniel folr...</h1>
                     <p>9999</p>
                 </div>
 
                 <div class="rankResult">
-                    <img src="./images/lorem.png">
+                    <img src="images/lorem.png">
                     <h1>Daniel folr...</h1>
                     <p>9999</p>
                 </div>
 
                 <div class="rankResult">
-                    <img src="./images/lorem.png">
+                    <img src="images/lorem.png">
                     <h1>Daniel folr...</h1>
                     <p>9999</p>
                 </div>
 
                 <div class="rankResult">
-                    <img src="./images/lorem.png">
+                    <img src="images/lorem.png">
                     <h1>Daniel folr...</h1>
                     <p>9999</p>
                 </div>
@@ -147,10 +147,10 @@
         <p id="rankFooter">Ranking</p>
     </footer>
 
-    <a class="Oculto"> <button onclick="MudarTema()"> <img src="./images/DarkIcon.png" id="tema"> </button></a>
-    <script src="./scripts/changeTheme.js"></script>
-    <script src="./scripts/footerOptions.js"></script>
-    <script src="./scripts/addPost.js"></script>
-    <script src="./scripts/write.js"></script>
+    <a class="Oculto"> <button onclick="MudarTema()"> <img src="images/DarkIcon.png" id="tema"> </button></a>
+    <script src="scripts/changeTheme.js"></script>
+    <script src="scripts/footerOptions.js"></script>
+    <script src="scripts/addPost.js"></script>
+    <script src="scripts/write.js"></script>
 </body>
 </html>
