--- a/public/login.html
+++ b/public/login.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/loginStyle.css">
-    <link rel="icon" href="./images/logoIconWithoutBackground.png">
-    <script src="./scripts/login.js"></script>
+    <link rel="stylesheet" href="styles/loginStyle.css">
+    <link rel="icon" href="images/logoIconWithoutBackground.png">
+    <script src="scripts/login.js"></script>
 </head>
 <body>
      
@@ -20,7 +20,7 @@
             <input id="passwordInput" type="password" required><br>
             <input id="resetInput" type="reset">
             <input id="submitInput" type="submit">
-            <p>Não possui conta?<a href="./signup.html" style="color:var(--main-brand)">Cadastre-se</a></p>
+            <p>Não possui conta?<a href="signup.html" style="color:var(--main-brand)">Cadastre-se</a></p>
             <button id="exitLogin">X</button>
         </form>
     </section>
