--- a/public/signup.html
+++ b/public/signup.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/logoIconWithoutBackground.png">
+    <link rel="icon" href="images/logoIconWithoutBackground.png">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/signupStyle.css">
+    <link rel="stylesheet" href="styles/signupStyle.css">
 </head>
 <body>
     
@@ -28,7 +28,7 @@
         <i id="warningText">As senhas não coincidem</i><br>
         <input id="resetBtn" type="reset" >
         <input id="submitBtn" type="submit">
-        <p style="font-size:20px;">Já possui uma conta? <a href="./login.html" style="color:var(--main-brand)">Faça Login</a></p><br><br>
+        <p style="font-size:20px;">Já possui uma conta? <a href="login.html" style="color:var(--main-brand)">Faça Login</a></p><br><br>
     </form>
 
 </body>
