--- a/public/user.html
+++ b/public/user.html
@@ -237,7 +237,7 @@
 
     <script src="scripts/scriptUser.js"></script>
     <script src="scripts/changeTheme.js"></script>
-    <script src="scripts/addPost.js"></script>
+    <script src="scripts/Post.js"></script>
 
 </body>
 </html>
