--- a/public/signup.html
+++ b/public/signup.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/logoIconWithoutBackground.png">
     <title>Document</title>
     <link rel="stylesheet" href="styles/signupStyle.css">
+    <script src="scripts/avoidFlickering.js"></script>
 </head>
 <body>
     
@@ -28,7 +29,7 @@
         <i id="warningText">As senhas não coincidem</i><br>
         <input id="resetBtn" type="reset" >
         <input id="submitBtn" type="submit">
-        <p style="font-size:20px;">Já possui uma conta? <a href="login.html" style="color:var(--main-brand)">Faça Login</a></p><br><br>
+        <p style="font-size:20px;">Já possui uma conta? <a href="app.html" style="color:var(--main-brand)">Faça Login</a></p><br><br>
     </form>
 
 </body>
