--- a/public/configurations.html
+++ b/public/configurations.html
@@ -95,7 +95,7 @@
         <div class="Botões">
             <button>Desativar conta</button> <button id="Excluir">Excluir conta</button> <br>
             <br><br>
-            <button id="Sair">Sair</button>
+            <button id="Sair" onclick="Sair()">Sair</button>
         </div>
 
     </section>
