pequenas alterações, consertar para merge

--- a/user.html
+++ b/user.html
@@ -151,56 +151,61 @@
 
 
                 <div id="boxPosts">
+                    <div id="contentButtons">
 
-
-                    <div class="postResult">
-                        <a href="#"><h1>A Post</h1></a>
-                        <i>By <a href="#">Ion Mateus</a></i>
-                        <p>lvwuvEkXKgvJiplMEGaAQKUaUNrdFrzw
-                            gXPtbVrbHLMoMQLCdVfDQngBqNHbdIbx
-                            jvWOJZoWnyvmFaDVoHErBusuCwEauiXB
-                            MHzghLPQjnAwICSJPNGZlPHCpowrQSca
-                            lvFLDRhQrKCCffeZZpUuGTaZVkWKeHvp
-                            mOErUbuWBXwGBQzWMvwzVusqbKuVEWDz
-                            qTbnVmAcqIEWhYyxtjxvrnKKeWHdoXIZ
-                            reajfrRIiCkJpSADESPgsQNcwmPPZkMH
-                            RMQuStfjMtesptiPuBTnEsrSBjfWWtWA
-                            lHpioeFYEsEWzFTUfdEEYOMLxSZIwpHP</p>
-                        <b>
-                            <a href="#">Programming</a> |
-                            <a href="#">C++</a> |
-                            <a href="#">Google</a> |
-                            <a href="#">Java</a>
-                        </b>
                     </div>
 
-                    <div class="postResult">
-                        <a href="#"><h1>A Post</h1></a>
-                        <i>By <a href="#">Ion Mateus</a></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                        <b>
-                            <a href="#">Programming</a> |
-                            <a href="#">C++</a> |
-                            <a href="#">Google</a> |
-                            <a href="#">Java</a>
-                        </b>
-                    </div>
+                    <div id="posts">
+                        <div class="postResult">
+                            <a href="#"><h1>A Post</h1></a>
+                            <i>By <a href="#">Ion Mateus</a></i>
+                            <p>lvwuvEkXKgvJiplMEGaAQKUaUNrdFrzw
+                                gXPtbVrbHLMoMQLCdVfDQngBqNHbdIbx
+                                jvWOJZoWnyvmFaDVoHErBusuCwEauiXB
+                                MHzghLPQjnAwICSJPNGZlPHCpowrQSca
+                                lvFLDRhQrKCCffeZZpUuGTaZVkWKeHvp
+                                mOErUbuWBXwGBQzWMvwzVusqbKuVEWDz
+                                qTbnVmAcqIEWhYyxtjxvrnKKeWHdoXIZ
+                                reajfrRIiCkJpSADESPgsQNcwmPPZkMH
+                                RMQuStfjMtesptiPuBTnEsrSBjfWWtWA
+                                lHpioeFYEsEWzFTUfdEEYOMLxSZIwpHP</p>
+                            <b>
+                                <a href="#">Programming</a> |
+                                <a href="#">C++</a> |
+                                <a href="#">Google</a> |
+                                <a href="#">Java</a>
+                            </b>
+                        </div>
 
-                    <div class="postResult">
-                        <a href="#"><h1>A Post</h1></a>
-                        <i>By <a href="#">Ion Mateus</a></i>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
-                        <b>
-                            <a href="#">Programming</a> |
-                            <a href="#">C++</a> |
-                            <a href="#">Google</a> |
-                            <a href="#">Java</a>
-                        </b>
-                    </div>
+                        <div class="postResult">
+                            <a href="#"><h1>A Post</h1></a>
+                            <i>By <a href="#">Ion Mateus</a></i>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                            <b>
+                                <a href="#">Programming</a> |
+                                <a href="#">C++</a> |
+                                <a href="#">Google</a> |
+                                <a href="#">Java</a>
+                            </b>
+                        </div>
 
+                        <div class="postResult">
+                            <a href="#"><h1>A Post</h1></a>
+                            <i>By <a href="#">Ion Mateus</a></i>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.</p>
+                            <b>
+                                <a href="#">Programming</a> |
+                                <a href="#">C++</a> |
+                                <a href="#">Google</a> |
+                                <a href="#">Java</a>
+                            </b>
+                        </div>
+                    </div>
 
                 </div>
         
+            </div>
+        </div>        
         <aside id="side">
             <div id="boxBIO">
                 <div id="bio">
@@ -232,12 +237,11 @@
             </div>
         </aside>
     </div>
-    </div>
-    </div>
+    
 
     <script src="./scripts/scriptUser.js"></script>
     <script src="./scripts/changeTheme.js"></script>
-    <script src="./scripts/addPost.js"></script>
+    <!-- <script src="./scripts/addPost.js"></script> -->
 
 </body>
 </html>
