começar botões content (que mostram conteúdo escondido pelo @media)

--- a/public/user.html
+++ b/public/user.html
@@ -151,24 +151,17 @@
 
 
                 <div id="boxPosts">
-                    <div id="contentButtons">
-
+                    <div id="divContentButtons">
+                        <button onclick="selecionar(`cbPosts`)" id="cbPosts" class="contentButton">Posts</button>
+                        <button onclick="selecionar(`cbPessoal`)" id="cbPessoal" class="contentButton">Pessoal</button>
+                        <button onclick="selecionar(`cbConquistas`)" id="cbConquistas" class="contentButton">Conquistas</button>
                     </div>
 
                     <div id="posts">
                         <div class="postResult">
                             <a href="#"><h1>A Post</h1></a>
                             <i>By <a href="#">Ion Mateus</a></i>
-                            <p>lvwuvEkXKgvJiplMEGaAQKUaUNrdFrzw
-                                gXPtbVrbHLMoMQLCdVfDQngBqNHbdIbx
-                                jvWOJZoWnyvmFaDVoHErBusuCwEauiXB
-                                MHzghLPQjnAwICSJPNGZlPHCpowrQSca
-                                lvFLDRhQrKCCffeZZpUuGTaZVkWKeHvp
-                                mOErUbuWBXwGBQzWMvwzVusqbKuVEWDz
-                                qTbnVmAcqIEWhYyxtjxvrnKKeWHdoXIZ
-                                reajfrRIiCkJpSADESPgsQNcwmPPZkMH
-                                RMQuStfjMtesptiPuBTnEsrSBjfWWtWA
-                                lHpioeFYEsEWzFTUfdEEYOMLxSZIwpHP</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque praesentium vero ab necessitatibus commodi quibusdam omnis fuga, eum odit perspiciatis cumque voluptates officiis ea aliquam illum expedita quidem? Aperiam, eos?</p>
                             <b>
                                 <a href="#">Programming</a> |
                                 <a href="#">C++</a> |
@@ -240,6 +233,7 @@
     
     <script src="./scripts/scriptUser.js"></script>
     <script src="./scripts/changeTheme.js"></script>
+    <script src="./scripts/userSelectedButton.js"></script>
     <!-- <script src="./scripts/addPost.js"></script> -->
 
 </body>
