melhorar botões de conteúdo

--- a/public/user.html
+++ b/public/user.html
@@ -152,12 +152,12 @@
 
                 <div id="boxPosts">
                     <div id="divContentButtons">
-                        <button onclick="selecionar(`cbPosts`)" id="cbPosts" class="contentButton">Posts</button>
-                        <button onclick="selecionar(`cbPessoal`)" id="cbPessoal" class="contentButton">Pessoal</button>
-                        <button onclick="selecionar(`cbConquistas`)" id="cbConquistas" class="contentButton">Conquistas</button>
+                        <button onclick="selecionar(`CbPosts`)" id="CbPosts" class="contentButton">Posts</button>
+                        <button onclick="selecionar(`CbPessoal`)" id="CbPessoal" class="contentButton">Pessoal</button>
+                        <button onclick="selecionar(`CbConquistas`)" id="CbConquistas" class="contentButton">Conquistas</button>
                     </div>
 
-                    <div id="posts">
+                    <div id="boxCbPosts" class="boxCbs">
                         <div class="postResult">
                             <a href="#"><h1>A Post</h1></a>
                             <i>By <a href="#">Ion Mateus</a></i>
@@ -194,6 +194,15 @@
                             </b>
                         </div>
                     </div>
+
+                    <div id="boxCbPessoal" class="boxCbs">
+                        PESSOAL
+                    </div>
+
+                    <div id="boxCbConquistas" class="boxCbs">
+                        CONQUISTAS
+                    </div>
+
 
                 </div>
         
