Adicionar sistema de banco de dados prisma para posts

--- a/public/app.html
+++ b/public/app.html
@@ -82,14 +82,16 @@
 
 
             <div class="postResult">
+                <div class="static">
                 <div class="interações">
                     <div class="curtidas">
-                        <p id="quantasCurtidas">0413</p> 
+                        <span id="quantasCurtidas">0413</span> 
                         <button id="like"> <img src="images/setaCima.png">  </button>
                         <button id="dislike"> <img src="images/setaBaixo.png"> </button>
                     </div>
                     <button id="report" onclick="reportar()"> <img src="images/report.png"> </button>
                 </div>
+            </div>
                 <div class="capa"></div>
 
                 <a href="#"><h1>A Post</h1></a>
