--- a/app.html
+++ b/app.html
@@ -50,14 +50,20 @@
 
     <div id="pageContent">
         <aside id="filter"> <br>
-            <h1>Filtro</h1>
+            <h1>Filtro</h1><br>
 
-            <input type="checkbox"><label for=""> filtro</label><br>
-            <input type="checkbox"><label for=""> filtro</label><br>
-            <input type="checkbox"><label for=""> filtro</label><br>
-            <input type="checkbox"><label for=""> filtro</label><br>
-            <input type="checkbox"><label for=""> filtro</label><br>
 
+            <input type="checkbox" style="scale:2;margin:20px"><label>Google</label><br>
+
+            <input type="checkbox" style="scale:2;margin:20px"><label>Microsoft</label><br>
+
+            <input type="checkbox" style="scale:2;margin:20px"><label>Node.JS</label><br>
+
+            <input type="checkbox" style="scale:2;margin:20px"><label>HTML</label><br>
+
+            <input type="checkbox" style="scale:2;margin:20px"><label>How to hack windows 7</label><br>
+
+            <br><br><br>
             <footer>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil qui ex nemo sapiente quasi suscipit reiciendis obcaecati officiis, veritatis consequuntur culpa, fugit officia ipsam aspernatur ab ipsum molestiae rem facere.</p>
             </footer>
@@ -65,30 +71,6 @@
 
         <article id="boxPosts">
             <h1>Resultados</h1> <br>
-
-
-            <div class="postResult">
-
-                <div style="background-image: url(https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg);"></div>
-
-                <a href="#"><h1>A Post</h1></a>
-                <i>By <a href="#">Ion Mateus</a></i>
-
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo reiciendis quae eum ducimus, minus dignissimos consequatur sunt earum impedit aut autem nesciunt inventore vitae quod obcaecati ipsam dolores ipsum similique.
-
-                </p>
-
-                <b>
-                    <a href="#">Programming</a> |
-                    <a href="#">C++</a> |
-                    <a href="#">Google</a> |
-                    <a href="#">Java</a>
-                </b>
-
-            </div> 
-
-
         </article>
 
         <aside id="ranks"> <br>
@@ -97,45 +79,10 @@
 
                 <div class="rankResult">
                     <img src="./images/lorem.png">
-                    <h1>Daniel</h1>
-                    <p>001</p>
-                </div>
-
-                <div class="rankResult">
-                    <img src="./images/lorem.png">
-                    <h1>D</h1>
-                    <p>001</p>
-                </div>
-
-                <div class="rankResult">
-                    <img src="./images/lorem.png">
                     <h1>Daniel folr...</h1>
                     <p>9999</p>
                 </div>
 
-                <div class="rankResult">
-                    <img src="./images/lorem.png">
-                    <h1>Daniel folr...</h1>
-                    <p>9999</p>
-                </div>
-
-                <div class="rankResult">
-                    <img src="./images/lorem.png">
-                    <h1>Daniel folr...</h1>
-                    <p>9999</p>
-                </div>
-
-                <div class="rankResult">
-                    <img src="./images/lorem.png">
-                    <h1>Daniel folr...</h1>
-                    <p>9999</p>
-                </div>
-
-                <div class="rankResult">
-                    <img src="./images/lorem.png">
-                    <h1>Daniel folr...</h1>
-                    <p>9999</p>
-                </div>
 
             </div>
         </aside>
@@ -152,5 +99,6 @@
     <script src="./scripts/footerOptions.js"></script>
     <script src="./scripts/addPost.js"></script>
     <script src="./scripts/write.js"></script>
+    <script src="./scripts/addRank.js"></script>
 </body>
 </html>
