Adicionar sistema de inserir informações do banco no user

--- a/public/app.html
+++ b/public/app.html
@@ -39,7 +39,7 @@
 
         <div id="botões">
         <a href="configurations.html"><button><img src="images/settings.png"></button></a>
-        <a href="user.html"><button><img src="images/noUserImage.png"></button></a>
+        <a href="user.html"><button><img src="images/noUserImage.png" id="iconUser"></button></a>
     </div>
     </header>
 
