--- a/public/user.html
+++ b/public/user.html
@@ -219,7 +219,7 @@
         <aside id="side">
             <div id="boxBIO">
                 <div id="bio">
-                    <p>Lorem ipsum dolor sit, amet consectt enim quidem illum atque optnte beatae volrum vitae voluptates magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ad sunt harum optio et enim quos at modi odit sed inventore velit ipsum, eligendi aperiam nostrum aliquam itaque vel animi? lorem</p>
+                    <p id="bioText">Lorem ipsum dolor sit, amet consectt enim quidem illum atque optnte beatae volrum vitae voluptates magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ad sunt harum optio et enim quos at modi odit sed inventore velit ipsum, eligendi aperiam nostrum aliquam itaque vel animi? lorem</p>
                 </div>
             </div>
         
@@ -248,16 +248,9 @@
         </aside>
     </div>
     
-    <script src="./scripts/scriptUser.js"></script>
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/userSelectedButton.js"></script>
-
-    <script>
-        document.querySelector("#boxCbPessoalRanking").appendChild(document.querySelector("#ranking").cloneNode(true))
-        document.querySelector("#containerBio").appendChild(document.querySelector("#bio").cloneNode(true))
-        document.querySelector("#boxCbCED").appendChild(document.querySelector("#cardConquistaEmDestaque").cloneNode(true))
-    </script>
-
+    <script src="./scripts/scriptUser.js"></script>
 
     <!-- <script src="./scripts/addPost.js"></script> -->
 
