Adicionar uso da api de google cloud storage

--- a/public/app.html
+++ b/public/app.html
@@ -51,8 +51,9 @@
             <img src="images/noUserImage.png"> <br>
             <div class="textarea" contenteditable="true" placeholder="O que você deseja escrever?"></div>
         </div>
+        <img src="" id="capa">
         <div class="botões">
-            <button class="button extra icones" onclick="openFile()"> <img src="images/img-icon.png"></button>
+            <button class="button extra icones" onclick="openFile('capa')"> <img src="images/img-icon.png"></button>
             <button class="button icones" id="bold_button"> <img src="images/Bold-icon.png"> </button>
             <button class="button icones" id="italic_button"> <img src="images/Italic-icon.png"> </button>
             <button class="button icones" id="underline_button"> <img src="images/Underline-icon.png"> </button>
@@ -169,7 +170,8 @@
     <script src="scripts/Post.js"></script>
     <script src="scripts/write.js"></script>
     <script src="scripts/login.js"></script>
-    <script src="./scripts/addRank.js"></script>
+    <script src="scripts/addRank.js"></script>
+    <script src="scripts/postImage.js"></script>
 
 </body>
 </html>
