--- a/public/configurations.html
+++ b/public/configurations.html
@@ -52,7 +52,7 @@
         <li class="TituloMobile MobileInformações" onclick="retornar()"><h1> <img src="images/setaEsquerda.png"> Informações</h1></li>
     
         <div class="boxUsuario">
-            <img src="images/noUserImage.png" onclick="abrirArquivo()" id="iconUser"> <span id="nomeDoUsuario">Nome do usuário</span> <br>
+            <img src="images/noUserImage.png" onclick="openFile('iconUser')" id="iconUser"> <span id="nomeDoUsuario">Nome do usuário</span> <br>
 
             <div class="BoxInformações">
                 <label id="nomeExibido">Nome exibido</label> <br>
@@ -101,5 +101,6 @@
     </section>
 
     <script src="scripts/config.js"></script>
+    <script src="scripts/postImage.js"></script>
 </body>
 </html>
