--- a/public/user.html
+++ b/public/user.html
@@ -251,6 +251,12 @@
     <script src="./scripts/changeTheme.js"></script>
     <script src="./scripts/userSelectedButton.js"></script>
     <script src="./scripts/scriptUser.js"></script>
+    
+    <script>
+        document.querySelector("#boxCbPessoalRanking").appendChild(document.querySelector("#ranking").cloneNode(true))
+        document.querySelector("#containerBio").appendChild(document.querySelector("#bio").cloneNode(true))
+        document.querySelector("#boxCbCED").appendChild(document.querySelector("#cardConquistaEmDestaque").cloneNode(true))
+    </script>
 
     <!-- <script src="./scripts/addPost.js"></script> -->
 
